# maplab

algorithms/loopclosure/loop-closure-handler/src/: loop-closure-handler.cc  loop-detector-node.cc
applications/maplab-console/: CMakeLists.txt
applications/maplab-console-full/: package.xml
applications/maplab-console/launch/: optag-eval.launch
applications/maplab-console/share/: batch-runner-example.yaml  optag-re-localization-TSP-eval.yaml  optag-re-localization-eval-example.yaml  optag-re-localization-eval-exploration.yaml  optag-re-localization-eval-reconstruction.yaml  optag-re-localization-eval.yaml  optag-re-localization-floorplan-TSP-eval.yaml  optag-re-localization-floorplan-eval.yaml
applications/maplab-console/src/: re-localization-evaluation.cc
applications/maplab-node/launch/maze/: maze-maplab-node-w-rovioli.launch
applications/maplab-node/share/: maplab.rviz  optag.rviz
applications/rovioli/scripts/: build_map  build_map_w_localization
applications/rovioli/share/: imu-sigmas-rovio_cla.yaml  ncamera_cla.yaml
console-plugins/loop-closure-plugin/src/: loop-closure-plugin.cc  vi-map-merger.cc
console-plugins/re-localization-evaluation-plugin/: CMakeLists.txt  package.xml
console-plugins/re-localization-evaluation-plugin/include/re-localization-evaluation-plugin/: re-localization-evaluation-plugin.h  vi-map-localizer.h
console-plugins/re-localization-evaluation-plugin/src/: re-localization-evaluation-plugin.cc  vi-map-localizer.cc
map-structure/vi-map/src/: vertex.cc  vi-map.cc
visualization/src/: viwls-graph-plotter.cc
(+15 files in other folders)
