<?xml version="1.0"?>
<package format="2">
  <name>re_localization_evaluation_plugin</name>
  <version>1.0.0</version>
  <description>The re_localization_evaluation_plugin package</description>
  <maintainer email="michbaum@ethz.ch">Michael Baumgartner</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

<!-- TODO: (michbaum) Check which dependencies are really still needed -->
  <depend>aslam_cv_common</depend>
  <depend>console_common</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>landmark_triangulation</depend>
  <depend>loop_closure_handler</depend>
  <depend>map_manager</depend>
  <depend>map_optimization</depend>
  <depend>maplab_common</depend>
  <depend>vi_map</depend>
</package>
